--- a/Server/public/css/fb-styles.css
+++ b/Server/public/css/fb-styles.css
@@ -590,9 +590,10 @@ body {
 .supercontainer {
   margin: auto;
   margin-top: -750px;
-  margin-bottom: 290px;
+  margin-bottom: 480px;
   min-width: 560px;
-  max-width: 1100px; }
+  max-width: 1100px;
+  z-index: 3; }
 
 .feedback-window {
   position: absolute;
@@ -915,15 +916,21 @@ body {
 
 /*-----------Footer styles ---------------------------*/
 footer {
+  z-index: 1;
   width: 100%;
   bottom: 0;
   position: fixed; }
   footer.row {
-    margin-bottom: 0; }
+    margin-bottom: 0 !important; }
   footer.page-footer {
     background-color: #343434; }
     footer.page-footer p {
-      font-size: 1rem;
-      line-height: 1rem; }
+      padding-top: 0;
+      font-size: 0.9rem;
+      line-height: 0.8rem;
+      margin-bottom: 0;
+      margin-top: 0.5rem; }
+    footer.page-footer.row {
+      margin-bottom: 0 !important; }
   footer.footer-copyright {
     background-color: #07285a; }
