--- a/scss/fb-styles.scss
+++ b/scss/fb-styles.scss
@@ -129,7 +129,7 @@ body {
   // ribbon adjustment trick
   margin-top: -750px;
   // hack for sticky footer
-  margin-bottom: 480px;
+  //margin-bottom: 480px;
   min-width: 560px;
   max-width: 1100px;
   z-index: 3;
@@ -645,7 +645,7 @@ footer{
   z-index: 1;
   width: 100%;
   bottom: 0;
-  position: fixed;
+  //position: fixed;
   &.row{
     margin-bottom: 0!important;
   }
