footerfix 2, navigation adjustmens

--- a/Server/public/views/searchRecipe.tpl.html
+++ b/Server/public/views/searchRecipe.tpl.html
@@ -17,7 +17,7 @@
                     <img src="pictures/food_teddy.jpg">
                 </div>
                 <div class="card-content">
-                    <p translate="TEASER_TITLE_NEW_TEXT">Registrierte Benutzer können ihre eigenen Rezepte erfassen.</p>
+                    <p translate="TEASER_TITLE_NEW_TEXT">Registrierte Benutzer können eigene Rezepte erfassen!</p>
                 </div>
                 <div class="card-action">
                     <a class="btn deep-orange white-text" href="#/addRecipe" translate="BUTTON_CREATE">Mitmachen</a>
