--- a/Server/public/css/fb-styles.css
+++ b/Server/public/css/fb-styles.css
@@ -568,7 +568,10 @@ body {
   text-align: center; }
 
 .nav-wrapper {
-  background: #0277bd; }
+  background: #0277bd;
+  font-size: 1.2rem;
+  font-weight: 200;
+  letter-spacing: 0.05rem; }
   .nav-wrapper a:focus {
     background: #07285a;
     border: 1px solid white; }
@@ -576,6 +579,9 @@ body {
 .fb-title {
   padding-left: 15px;
   font-size: 1.6rem; }
+  .fb-title i {
+    font-size: 2rem;
+    color: #f4511e; }
 
 .userlogedin {
   background: #29b6f6; }
@@ -589,8 +595,8 @@ body {
 
 .supercontainer {
   margin: auto;
-  margin-top: -750px;
-  margin-bottom: 350px;
+  margin-top: -850px;
+  margin-bottom: 300px;
   min-width: 560px;
   max-width: 1100px;
   z-index: 3; }
@@ -663,7 +669,7 @@ body {
   .searchRecipe .title-bg {
     background: #0277bd;
     color: #FFF;
-    height: 150px;
+    height: 120px;
     width: 100%; }
     .searchRecipe .title-bg h3 {
       font-weight: 100;
@@ -916,20 +922,28 @@ body {
 
 /*-----------Footer styles ---------------------------*/
 footer {
+  border-top: 1px solid #039be5;
   position: fixed;
   z-index: 1;
   width: 100%;
   bottom: 0; }
   footer.row {
-    margin-bottom: 0 !important; }
+    margin-bottom: 0 !important;
+    margin-top: 0.5rem !important; }
   footer.page-footer {
-    background-color: #0277bd; }
+    background-color: #0D47A1;
+    padding-top: 0; }
     footer.page-footer p {
       padding-top: 0;
-      font-size: 0.9rem;
-      line-height: 0.8rem;
+      font-size: 1rem;
+      line-height: 0.9rem;
+      letter-spacing: 0.1rem;
       margin-bottom: 0;
       margin-top: 0.5rem; }
+    footer.page-footer h5 {
+      font-size: 1.2rem;
+      line-height: 1.3rem;
+      letter-spacing: 0.15rem; }
     footer.page-footer.row {
       margin-bottom: 0 !important; }
   footer.footer-copyright {
